--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -634,7 +634,7 @@
     <footer class="new-footer" data-gtm-category="Footer">
       <div  class="new-footer__reconciliation">
         <div class="new-footer__acknowledgement">
-              UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. — <a href="https://about.uq.edu.au/reconciliation" class="new-footer__link">Reconciliation statement</a>
+              UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. &mdash; <a href="https://about.uq.edu.au/reconciliation" class="new-footer__link">Reconciliation statement</a>
         </div>
       </div>
       <div class="new-footer__container">
@@ -847,7 +847,7 @@
         </div>
         <nav class="new-footer__meta">
           <ul  class="new-footer__footer-list">
-            <li class="new-footer__footer-item">© The University of Queensland</li>
+            <li class="new-footer__footer-item">&copy; The University of Queensland</li>
             <li class="new-footer__footer-item"><abbr title="Australian Business Number">ABN</abbr>: 63 942 912 684 </li>
             <li class="new-footer__footer-item"><abbr title="Commonwealth Register of Institutions and Courses for Overseas Students">CRICOS</abbr> Provider No: <a class="new-footer__link" href="https://www.uq.edu.au/about/cricos-link" rel="external" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'CRICOS'});">00025B</a></li>
           </ul>
