Content updates to POC

--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -41,22 +41,17 @@
                 <li>
                   <a href="#">Study overview</a>
                 </li>
-                <li>
-                  <a href="#">Study options</a>
-                  <ul>
-                    <li><a href="#">Find a course or program</a></li>
-                    <li><a href="#">Browse study areas</a></li>
-                    <li><a href="#">Why choose UQ</a></li>
-                    <li><a href="#">Enriching student experience</a></li>
-                    <li><a href="#">Study options & course types</a></li>
-                    <li><a href="#">Scholarships</a></li>
-                    <li><a href="#">Life at UQ & accommodation</a></li>
-                    <li><a href="#">How to apply</a></li>
-                    <li><a href="#">Campus, maps & transports</a></li>
-                    <li><a href="#">Events for prospective students</a></li>
-                    <li><a href="#">Starting university</a></li>
-                  </ul>
-                </li>
+                <li><a href="#">Find a course or program</a></li>
+                <li><a href="#">Browse study areas</a></li>
+                <li><a href="#">Why choose UQ</a></li>
+                <li><a href="#">Enriching student experience</a></li>
+                <li><a href="#">Study options & course types</a></li>
+                <li><a href="#">Scholarships</a></li>
+                <li><a href="#">Life at UQ & accommodation</a></li>
+                <li><a href="#">How to apply</a></li>
+                <li><a href="#">Campus, maps & transports</a></li>
+                <li><a href="#">Events for prospective students</a></li>
+                <li><a href="#">Starting university</a></li>
                 <li>
                   <a href="#">Information for</a>
                   <ul>
@@ -80,28 +75,23 @@
                 <li>
                   <a href="#">Research overview</a>
                 </li>
-                <li>
-                  <a href="#">Research options</a>
-                  <ul>
-                    <li><a href="#">Find a course or program</a></li>
-                    <li><a href="#">Browse study areas</a></li>
-                    <li><a href="#">Why choose UQ</a></li>
-                    <li><a href="#">Enriching student experience</a></li>
-                    <li><a href="#">Study options & course types</a></li>
-                    <li><a href="#">Scholarships</a></li>
-                  </ul>
-                </li>
+                <li><a href="#">Research excellence and impact</a></li>
+                <li><a href="#">Faculties, schools, intitutues & centres</a></li>
+                <li><a href="#">Research facilities</a></li>
+                <li><a href="#">Find a researcher or supervisor</a></li>
+                <li><a href="#">Research degrees and graduate students</a></li>
+                <li><a href="#">Industry research collaboration</a></li>
+                <li><a href="#">Be a research participant or volunteer</a></li>
                 <li>
                   <a href="#">Information for</a>
                   <ul>
-                    <li><a href="#">International students</a></li>
-                    <li><a href="#">Internation agents</a></li>
-                    <li><a href="#">High school students</a></li>
-                    <li><a href="#">Mature students</a></li>
-                    <li><a href="#">Postgraduate research (HDR) students</a></li>
-                    <li><a href="#">Aboriginal and Torres Strat Islander students</a></li>
-                    <li><a href="#">Study abroad and exchange students</a></li>
-                    <li><a href="#">Teachers and guidance counsellors</a></li>
+                    <li><a href="#">Future research students</a></li>
+                    <li><a href="#">New research students</a></li>
+                    <li><a href="#">Current research students</a></li>
+                    <li><a href="#">Prospective research partners</a></li>
+                    <li><a href="#">Commuinity facilities and services</a></li>
+                    <li><a href="#">Policies and procedures</a></li>
+                    <li><a href="#">Key initiatives</a></li>
                   </ul>
                 </li>
               </ul>
@@ -112,26 +102,21 @@
                 <li>
                   <a href="#">Partners and community overview</a>
                 </li>
-                <li>
-                  <a href="#">Heading TBC</a>
-                  <ul>
-                    <li><a href="#">Research and corporate partnerships</a></li>
-                    <li><a href="#">UQ Alumni community</a></li>
-                    <li><a href="#">Working with high schools</a></li>
-                    <li><a href="#">Offer work placements and internship program </a></li>
-                    <li><a href="#">High school engagement</a></li>
-                    <li><a href="#">Giving and philanthropy</a></li>
-                    <li><a href="#">Sponsorship</a></li>
-                    <li><a href="#">Community engagement and volunteering</a></li>
-                    <li><a href="#">Indigenous engagement</a></li>
-                  </ul>
-                </li>
+                <li><a href="#">Research & corporate partnerships</a></li>
+                <li><a href="#">UQ Alumni community</a></li>
+                <li><a href="#">Working with High Schools</a></li>
+                <li><a href="#">Offer work placements and internship programs</a></li>
+                <li><a href="#">High school engagement</a></li>
+                <li><a href="#">Giving and philanthropy</a></li>
+                <li><a href="#">Sponsorship</a></li>
+                <li><a href="#">Commnity engagement & volunteering</a></li>
+                <li><a href="#">Indigenous engagement</a></li>
                 <li>
                   <a href="#">Information for</a>
                   <ul>
                     <li><a href="#">Alumni</a></li>
                     <li><a href="#">Donors</a></li>
-                    <li><a href="#">Buisness and industry</a></li>
+                    <li><a href="#">Business and industry</a></li>
                     <li><a href="#">Government</a></li>
                     <li><a href="#">Media</a></li>
                   </ul>
@@ -144,20 +129,15 @@
                 <li>
                   <a href="#">About overview</a>
                 </li>
-                <li>
-                  <a href="#">Heading TBC</a>
-                  <ul>
-                    <li><a href="#">Introducing UQ</a></li>
-                    <li><a href="#">Vision, values and strategy</a></li>
-                    <li><a href="#">Organisational structure and governance</a></li>
-                    <li><a href="#">Teaching and learning</a></li>
-                    <li><a href="#">Faculties, schools, institutes and centres</a></li>
-                    <li><a href="#">Colleges and accommodation</a></li>
-                    <li><a href="#">Community facilities and services</a></li>
-                    <li><a href="#">Polocies and procedures</a></li>
-                    <li><a href="#">Key initiatives</a></li>
-                  </ul>
-                </li>
+                <li><a href="#">Introducing UQ</a></li>
+                <li><a href="#">Vision, values and strategy</a></li>
+                <li><a href="#">Organisational structure and governance</a></li>
+                <li><a href="#">Teaching and learning</a></li>
+                <li><a href="#">Faculties, schools, institutes and centres</a></li>
+                <li><a href="#">Colleges and accommodation</a></li>
+                <li><a href="#">Community faciliites and services</a></li>
+                <li><a href="#">Policies and Procedures</a></li>
+                <li><a href="#">Key initiatives</a></li>
               </ul>
             </li>
             <li  class="new-header__black-nav-item">
@@ -641,7 +621,7 @@
         <nav class="new-footer__navigation new-footer--desktop">
           <ul class="new-footer__navigation-list new-footer__navigation-level-1">
             <li class="new-footer__navigation-item new-footer__navigation--is-open">
-              <a href="#" class="new-footer__navigation-link">Media</a>
+              <h2 class="new-footer__sub-title">Media</h2>
               <ul class="new-footer__navigation-list new-footer__navigation-level-2">
                 <li class="new-footer__navigation-item">
                   <a href="#" class="new-footer__navigation-link">Media team contacts</a>
@@ -657,8 +637,8 @@
                 </li>
               </ul>
             </li>
-            <li class=new-footer__navigation-item">
-              <a href="#" class="new-footer__navigation-link">Staff</a>
+            <li class="new-footer__navigation-item">
+              <h2 class="new-footer__sub-title">Staff</h2>
               <ul class="new-footer__navigation-list new-footer__navigation-level-2">
                 <li class="new-footer__navigation-item">
                   <a href="#" class="new-footer__navigation-link">Jobs at UQ</a>
@@ -675,7 +655,7 @@
               </ul>
             </li>
             <li class="new-footer__navigation-item">
-              <a href="#" class="new-footer__navigation-link">Current students</a>
+              <h2 class="new-footer__sub-title">Current students</h2>
               <ul class="new-footer__navigation-list new-footer__navigation-level-2">
                 <li class="new-footer__navigation-item">
                   <a href="#" class="new-footer__navigation-link">Student login</a>
@@ -695,7 +675,7 @@
               </ul>
             </li>
             <li class="new-footer__navigation-item">
-              <a href="#" class="new-footer__navigation-link">Library</a>
+              <h2 class="new-footer__sub-title">Library</h2>
               <ul class="new-footer__navigation-list new-footer__navigation-level-2">
                 <li class="new-footer__navigation-item">
                   <a href="#" class="new-footer__navigation-link">Library services</a>
@@ -715,7 +695,7 @@
               </ul>
             </li>
             <li class="new-footer__navigation-item">
-              <a href="#" class="new-footer__navigation-link">Contact us / Find us</a>
+              <h2 class="new-footer__sub-title">Contact us / Find us</h2>
               <ul class="new-footer__navigation-list new-footer__navigation-level-2">
                 <li class="new-footer__navigation-item">
                   <a href="#" class="new-footer__navigation-link">Staff contact directory</a>
@@ -724,7 +704,10 @@
                   <a href="#" class="new-footer__navigation-link">find an expert or researcher</a>
                 </li>
                 <li class="new-footer__navigation-item">
-                  <a href="#" class="new-footer__navigation-link">Browse departments, faculties, institutes and centres</a>
+                  <a href="#" class="new-footer__navigation-link">Faculties, schools, institutes and centres</a>
+                </li>
+                <li class="new-footer__navigation-item">
+                  <a href="#" class="new-footer__navigation-link">Divisions and departments</a>
                 </li>
                 <li class="new-footer__navigation-item">
                   <a href="#" class="new-footer__navigation-link">Campus maps and facilities</a>
@@ -821,7 +804,10 @@
                   <a href="#" class="new-footer__navigation-link">find an expert or researcher</a>
                 </li>
                 <li class="new-footer__navigation-item">
-                  <a href="#" class="new-footer__navigation-link">Browse departments, faculties, institutes and centres</a>
+                  <a href="#" class="new-footer__navigation-link">Faculties, schools, institutes and centres</a>
+                </li>
+                <li class="new-footer__navigation-item">
+                  <a href="#" class="new-footer__navigation-link">Divisions and departments</a>
                 </li>
                 <li class="new-footer__navigation-item">
                   <a href="#" class="new-footer__navigation-link">Campus maps and facilities</a>
@@ -835,11 +821,11 @@
           <nav class="new-footer__contact-item">
             <!-- <h2 class="new-footer__sub-title">Social media links</h2> -->
             <ul class="new-footer__footer-list new-footer__contact-social"> 
-              <li class="new-footer__footer-item"><a class="uq-icon uq-icon--social--social-facebook-circle uq-icon--light new-footer__meta-icons"></a></li> 
-              <li class="new-footer__footer-item"><a class="uq-icon uq-icon--social--social-linkedin-circle uq-icon--light new-footer__meta-icons"></a></li> 
-              <li class="new-footer__footer-item"><a class="uq-icon uq-icon--social--social-twitter-circle uq-icon--light new-footer__meta-icons"></a></li>
-              <li class="new-footer__footer-item"><a class="uq-icon uq-icon--social--social-you-tube-circle uq-icon--light new-footer__meta-icons"></a></li>
-              <li class="new-footer__footer-item"><a class="uq-icon uq-icon--social--social-instagram2-circle uq-icon--light new-footer__meta-icons"></a></li>
+              <li class="new-footer__footer-item"><a href="#" class="new-footer__meta-icons--facebook new-footer__meta-icons"></a></li> 
+              <li class="new-footer__footer-item"><a href="#" class="new-footer__meta-icons--linkedin new-footer__meta-icons"></a></li> 
+              <li class="new-footer__footer-item"><a href="#" class="new-footer__meta-icons--twitter new-footer__meta-icons"></a></li>
+              <li class="new-footer__footer-item"><a href="#" class="new-footer__meta-icons--youtube new-footer__meta-icons"></a></li>
+              <li class="new-footer__footer-item"><a href="#" class="new-footer__meta-icons--instagram new-footer__meta-icons"></a></li>
             </ul>
           </nav> 
           <div class="new-footer__contact-item new-footer__contact-login"><a href="#" class="new-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Web login'});">Web login</a></div>
@@ -856,9 +842,6 @@
           <ul class="new-footer__footer-list">
               <li class="new-footer__footer-item">
                   <a href="https://www.uq.edu.au/terms-of-use/" rel="external" class="new-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Privacy'});">Privacy &amp; Terms of use</a>
-              </li>
-              <li class="new-footer__footer-item">
-                <a href="https://ppl.app.uq.edu.au/" rel="external" class="new-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Policy and procedures'});">Policy and procedures</a>
               </li>
               <li class="new-footer__footer-item">
                   <a href="https://www.uq.edu.au/rti/" rel="external" class="new-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Right to information'});">Right to information</a>
