added has-dropdown variant to homepage menuand updated styles to reflect

--- a/packages/private-design-output/src/homepage.html
+++ b/packages/private-design-output/src/homepage.html
@@ -156,7 +156,7 @@
         <div class="new-header__main-nav-wrapper">
           <nav class="new-header__main-nav">
             <ul class="new-header__main-nav-list">
-              <li><a class="new-header__main-nav-link main-nav-link--study" href="https://future-students.uq.edu.au/" class="gtm-processed">Study</a>
+              <li><a class="new-header__main-nav-link main-nav-link--has-dropdown" href="https://future-students.uq.edu.au/" class="gtm-processed">Study</a>
                 <div class="new-header__megamenu-wrapper">
                   <div class="new-header__megamenu">
                     <a href="#" class="megamenu__overview-link">Study overview</a>
@@ -200,7 +200,7 @@
                   </div>
               </div>
               </li>
-              <li><a class="new-header__main-nav-link main-nav-link--research" href="https://research.uq.edu.au/" class="gtm-processed">Research</a>
+              <li><a class="new-header__main-nav-link main-nav-link--has-dropdown" href="https://research.uq.edu.au/" class="gtm-processed">Research</a>
                 <div class="new-header__megamenu-wrapper">
                   <div class="new-header__megamenu">
                     <a href="#" class="megamenu__overview-link">Research overview</a>
@@ -236,7 +236,7 @@
                   </div>
                 </div>
               </li>
-              <li><a class="new-header__main-nav-link" href="https://global-engagement.uq.edu.au/partnerships" class="gtm-processed">Partners and Community</a>
+              <li><a class="new-header__main-nav-link main-nav-link--has-dropdown" href="https://global-engagement.uq.edu.au/partnerships" class="gtm-processed">Partners and Community</a>
                 <div class="new-header__megamenu-wrapper">
                   <div class="new-header__megamenu">
                     <a href="#" class="megamenu__overview-link">Parners and Community overview</a>
@@ -278,7 +278,7 @@
                   </div>
                 </div>
               </li>
-              <li><a class="new-header__main-nav-link" href="https://about.uq.edu.au/" class="gtm-processed">About</a>
+              <li><a class="new-header__main-nav-link main-nav-link--has-dropdown" href="https://about.uq.edu.au/" class="gtm-processed">About</a>
                 <div class="new-header__megamenu-wrapper">
                   <div class="new-header__megamenu">
                     <a href="#" class="megamenu__overview-link">About overview</a>
