updated icon to use icon call rather than span

--- a/packages/private-design-output/src/interum.html
+++ b/packages/private-design-output/src/interum.html
@@ -24,10 +24,7 @@
         </div>
         <div class="new-header__search-toggle">
           <button class="main-nav__toggle main-nav__search-toggle">
-
-              <span class="uq-icon uq-icon--standard--search uq-icon--light"></span><span class="uq-icon uq-icon--standard--close uq-icon--light"></span> <div class="search-toggle__label">Search</div>
-
-
+            <div class="search-toggle__label">Search</div>
           </button>
         </div>
         <nav class="slide-menu global-mobile-nav" id="global-mobile-nav">
