--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -141,6 +141,9 @@
               </ul>
             </li>
             <li  class="new-header__black-nav-item">
+              <a class="new-header__black-nav-link" href="#">UQ home</a>
+            </li>
+            <li  class="new-header__black-nav-item">
               <a class="new-header__black-nav-link" href="#">News</a>
             </li>
             <li  class="new-header__black-nav-item">
@@ -150,7 +153,7 @@
               <a class="new-header__black-nav-link" href="#">Give</a>
             </li>
             <li  class="new-header__black-nav-item">
-              <a class="new-header__black-nav-link" href="#">Directories</a>
+              <a class="new-header__black-nav-link" href="#">Contact</a>
             </li>  
         </nav>
         <div class="new-header__main-nav-wrapper">
@@ -340,6 +343,9 @@
         <nav class="new-header__black-nav">
           <ul class="new-header__black-nav-list">
               <li class="new-header__black-nav-item">
+                <a href="https://www.uq.edu.au/news/" rel="external" class="new-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'UQ home'});">UQ home</a>
+              </li>
+              <li class="new-header__black-nav-item">
                   <a href="https://www.uq.edu.au/news/" rel="external" class="new-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'News'});">News</a>
               </li>
               <li class="new-header__black-nav-item">
@@ -349,7 +355,7 @@
                   <a href="https://alumni.uq.edu.au/giving/" rel="external" class="new-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Give'});">Give</a>
               </li>
               <li class="new-header__black-nav-item">
-                <a href="https://uq.edu.au/departments/" rel="external" class="new-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Directories'});">Directories</a>
+                <a href="https://uq.edu.au/departments/" rel="external" class="new-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Contact'});">Contact</a>
               </li>
           </ul>
         </nav>
