updated menu toggle, fixed logo spacing

--- a/packages/private-design-output/src/homepage.html
+++ b/packages/private-design-output/src/homepage.html
@@ -15,7 +15,7 @@
     <header class="new-header">
       <div class="new-header__wrapper">
         <div class="new-header__menu-toggle">
-          <button type="button" class="main-nav__toggle main-nav__menu-toggle slide-menu__control" data-target="global-mobile-nav" data-action="toggle"><span class="uq-icon uq-icon--standard--navigation-menu uq-icon--light"></span></button>
+          <button type="button" class="main-nav__toggle main-nav__menu-toggle slide-menu__control" data-target="global-mobile-nav" data-action="toggle">Menu</button>
         </div>
         <div class="new-header__logo">
           <a class="logo--large gtm-processed" href="https://www.uq.edu.au/">
