--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -621,7 +621,7 @@
         <nav class="new-footer__navigation new-footer--desktop">
           <ul class="new-footer__navigation-list new-footer__navigation-level-1">
             <li class="new-footer__navigation-item new-footer__navigation--is-open">
-              <h2 class="new-footer__sub-title">Media</h2>
+              <h2 class="new-footer__navigation-title">Media</h2>
               <ul class="new-footer__navigation-list new-footer__navigation-level-2">
                 <li class="new-footer__navigation-item">
                   <a href="#" class="new-footer__navigation-link">Media team contacts</a>
@@ -638,7 +638,7 @@
               </ul>
             </li>
             <li class="new-footer__navigation-item">
-              <h2 class="new-footer__sub-title">Staff</h2>
+              <h2 class="new-footer__navigation-title">Staff</h2>
               <ul class="new-footer__navigation-list new-footer__navigation-level-2">
                 <li class="new-footer__navigation-item">
                   <a href="#" class="new-footer__navigation-link">Jobs at UQ</a>
@@ -655,7 +655,7 @@
               </ul>
             </li>
             <li class="new-footer__navigation-item">
-              <h2 class="new-footer__sub-title">Current students</h2>
+              <h2 class="new-footer__navigation-title">Current students</h2>
               <ul class="new-footer__navigation-list new-footer__navigation-level-2">
                 <li class="new-footer__navigation-item">
                   <a href="#" class="new-footer__navigation-link">Student login</a>
@@ -675,7 +675,7 @@
               </ul>
             </li>
             <li class="new-footer__navigation-item">
-              <h2 class="new-footer__sub-title">Library</h2>
+              <h2 class="new-footer__navigation-title">Library</h2>
               <ul class="new-footer__navigation-list new-footer__navigation-level-2">
                 <li class="new-footer__navigation-item">
                   <a href="#" class="new-footer__navigation-link">Library services</a>
@@ -695,7 +695,7 @@
               </ul>
             </li>
             <li class="new-footer__navigation-item">
-              <h2 class="new-footer__sub-title">Contact us / Find us</h2>
+              <h2 class="new-footer__navigation-title">Contact us / Find us</h2>
               <ul class="new-footer__navigation-list new-footer__navigation-level-2">
                 <li class="new-footer__navigation-item">
                   <a href="#" class="new-footer__navigation-link">Staff contact directory</a>
@@ -819,7 +819,6 @@
         <!-- Footer contact details -->
         <div class="new-footer__contact">   
           <nav class="new-footer__contact-item">
-            <!-- <h2 class="new-footer__sub-title">Social media links</h2> -->
             <ul class="new-footer__footer-list new-footer__contact-social"> 
               <li class="new-footer__footer-item"><a href="#" class="new-footer__meta-icons--facebook new-footer__meta-icons"></a></li> 
               <li class="new-footer__footer-item"><a href="#" class="new-footer__meta-icons--linkedin new-footer__meta-icons"></a></li> 
